# rtrb-capi

./: CMakeLists.txt  Cargo.toml  Makefile  README.md  build.rs
.github/workflows/: ci.yml  release.yml
include/: rtrb.h
src/: lib.rs
tests/: CMakeLists.txt  it.rs  test.c  tests.cpp
